--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,20 +1,20 @@
 <section class="hero-image">
-  <p><%= Project.all.count %>
+  <h1><%= Project.all.count %>
     <% if Project.all.count == 1 %>
     project has
   <% else %>
     projects have
     <% end %>
-    been started</p>
-  <p><%= @successful_projects.count %>
+    been started</h1>
+  <h1><%= @successful_projects.count %>
     <% if @successful_projects.count == 1 %>
     project has
   <% else %>
     projects have
     <% end %>
-    been funded</p>
-  <p><%= project_pledges_sum(@successful_projects) %>
-    have been pledged towards successful projects</p>
+    been funded</h1>
+  <h1><%= project_pledges_sum(@successful_projects) %>
+    have been pledged towards successful projects</h1>
 </section>
 
 <p><%= link_to "New Project", new_project_path %></p>
