--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -14,6 +14,14 @@
     h1{
       margin: 1.5em 0;}
 }
+
+.project-list{
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-gap: 20px;
+  margin: 0 5%;
+}
+
 .project {
   text-align: center;
   margin: 1rem 0;
