--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -23,10 +23,13 @@
 }
 
 .project {
-  text-align: center;
+  text-align: left;
   margin: 1rem 0;
   padding: 1rem 0;
   background-color: #f9f9f9;
+  .project-title span{
+      font-size: 16px;
+  }
 }
 
 .project-image > img {
