--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -46,7 +46,7 @@
     div {
       grid-column: 1 / 11;
       grid-row: 4 /11;
-      margin: 10px;
+      margin: 1rem;
       background-size: cover;
     }
     .description {
@@ -79,11 +79,36 @@
     grid-gap: 0.7rem;
     .updates-and-comments {
       grid-column: 1 / 5;
-      overflow: scroll;
+      margin: 0 1.3rem;
     }
+    .project-updates {
+      h2 {
+        display: inline-block;
+        margin-right: 3rem;
+      }
+      a {
+        font-size: 0.75rem;
+      }
+      ul {
+        padding-left: 0;
+        list-style: none;
 
+      }
+      .update-links {
+        text-align: right;
+      }
+      .update {
+        box-shadow: -2px 4px 4px 2px rgba(#000000, 0.4);
+        padding: 1rem;
+        margin: 1rem 0;
+      }
+    }
     .project-rewards {
       grid-column: 5 / 7;
+      h2 {
+        display: inline-block;
+        margin-right: 3rem;
+      }
       .all-rewards {
         max-height: 700px;
         overflow: scroll;
