--- a/app/views/project_updates/_updates.html.erb
+++ b/app/views/project_updates/_updates.html.erb
@@ -4,13 +4,15 @@
 
 <ul>
   <% @updates.each do |update| %>
-  <li><%= update.title %><br />
-    <%= update.description %><br />
-    Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
-    <% if current_user == @project.user %>
-    <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
-    <% end %>
-  </li>
+      <li class="update">
+        <span class="update-title"><%= update.title %></span><br/>
+        <span class="update-description"><%= update.description %></span><br />
+        Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %>
+        <br/>
+        <% if current_user == @project.user %>
+          <div class="update-links"><%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %></div>
+        <% end %>
+      </li>
   <% end %>
 </ul>
 
