--- a/app/views/project_comments/_comments.html.erb
+++ b/app/views/project_comments/_comments.html.erb
@@ -1,6 +1,7 @@
 <% unless current_user %>
   <p>Please log in to leave a comment</p>
 <% end %>
+
 <% if @project.project_comments.any? %>
   <ul>
     <% @project.project_comments.each do |project_comment| %>
@@ -10,7 +11,7 @@
           <p><%= project_comment.comment %></p>
           <p>Created at <%= dateformat(project_comment.created_at) %>
           <% if current_user == project_comment.user %>
-            | <%= link_to("Delete", project_project_comment_path(@project, project_comment), method: :delete, data: { confirm: "Are you sure you want to delete your comment?"}) %>
+            <%= link_to("Delete", project_project_comment_path(@project, project_comment), method: :delete, data: { confirm: "Are you sure you want to delete your comment?"}) %>
           <% end %>
           </p>
         </li>
@@ -19,17 +20,4 @@
   </ul>
 <% else %>
   <p>No comments have been left yet.</p>
-<% end %>
-
-<% if current_user && current_user.pledged_projects.include?(@project) %>
-  <h3>Add Comment</h3>
-  <%= form_for([@project, @project_comment]) do |f| %>
-    <div>
-      <%= f.label :comment %>:
-      <%= f.text_area :comment %>
-    </div>
-    <div>
-      <%= f.submit "Submit Comment" %>
-    </div>
-  <% end %>
 <% end %>
