--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -42,6 +42,7 @@
     h4 {
       grid-column: 1 / 3;
       grid-row: 1;
+      margin-left: 1rem;
     }
     div {
       grid-column: 1 / 11;
@@ -58,7 +59,7 @@
       grid-row: 4 / 10;
     }
     .tags {
-      grid-column: 2 / 12;
+      grid-column: 3 / 12;
       grid-row: 3;
       p {
         background-color: cadetblue;
@@ -114,6 +115,11 @@
         text-align: right;
       }
     }
+    textarea {
+      width: 30rem;
+      height: 10rem;
+    }
+
     .project-rewards {
       grid-column: 5 / 7;
       h2 {
