--- a/app/views/project_comments/_new_comment.html.erb
+++ b/app/views/project_comments/_new_comment.html.erb
@@ -1,6 +1,6 @@
 <%= form_for [project, comment] do |f| %>
 
-<p>
+<p class="comment-box">
   <%= f.text_area :comment, placeholder: "Write your comment here!" %>
 </p>
 
