--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -115,9 +115,26 @@
         text-align: right;
       }
     }
+    .project-comments {
+      h2 {
+        line-height: 2;
+      }
+      p {
+        margin: 0.5rem 0;
+      }
+      ul {
+        list-style: none;
+        padding-left: 0;
+      }
+      li {
+        border-top: 1px solid lightgrey;
+        margin-bottom: 0.5rem;
+        padding-left: 1rem;
+      }
+    }
     textarea {
       width: 30rem;
-      height: 10rem;
+      height: 5rem;
     }
 
     .project-rewards {
