--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -20,15 +20,34 @@
   grid-template-columns: 33% 33% 33%;
   grid-gap: 20px;
   margin: 0 5%;
-}
-
-.project {
-  text-align: left;
-  margin: 1rem 0;
-  padding: 1rem 0;
-  background-color: #f9f9f9;
-  .project-title span{
-      font-size: 16px;
+  .project {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 33% 33% 33%;
+    text-align: left;
+    margin: 1rem 0;
+    padding: 1rem 0;
+    background-color: #f9f9f9;
+    .project-image{
+      grid-row-start: 1;
+      grid-row-end: 2;}
+    .project-padding{
+      padding: 4%;
+      .project-recap{
+        grid-row-start: 2;
+        grid-row-end: 3;
+      p {
+        height: 63px;}
+      .project-title span, .project-days-left{
+        font-size: 16px;}
+      }
+    }
+    .project-stats{
+      grid-row-start: 3;
+      grid-row-end: 4;
+      hr{
+        margin: 1.5em 0;}
+    }
   }
 }
 
@@ -44,8 +63,4 @@
 
 .project-title {
   margin-bottom: 0;
-}
-
-.project-days-left {
-  font-size: 0.75em;
 }
