Set default image if project has none set

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -23,7 +23,7 @@
     <article class="project">
       <%= link_to project, class: 'project-link' do %>
       <figure class="project-image">
-        <% if project.image %>
+        <% if project.image.present? %>
         <%= image_tag project.image %>
         <% else %>
         <%= image_tag ActionController::Base.helpers.asset_path("default.jpg") %>
