--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,34 +14,42 @@
   <body>
     <header class="site-header">
 
-      <nav class="site-nav">
-        <ul>
-          <li><%= link_to "Home", root_url %></li>
-          <li><%= link_to "New Project", new_project_path %></li>
-        </ul>
-      </nav>
+      <div class="site-left-nav">
+        <nav class="site-nav">
+          <ul>
+            <li><%= link_to "Home", root_url %> |</li>
+            <li><%= link_to "New Project", new_project_path %></li>
+          </ul>
+        </nav>
+      </div>
 
-      <h1 class="logo">Crowdfunder</h1>
+      <div class = "main-nav">
+        <h1 class="logo">Crowdfunder</h1>
+      </div>
 
-      <div class = "search-bar"
-        <%= form_tag(search_path, method: "get") do %>
+
+      <div class = "site-right-nav">
+        <div class = "search-bar">
+          <%= form_tag(search_path, method: "get") do %>
           <%= label_tag(:search, "Search", placeholder: "Search for a project") %>
           <%= text_field_tag(:search) %>
           <%= submit_tag("Search") %>
-        <% end %>
+          <% end %>
+        </div>
+
+        <nav class = "user-nav">
+          <ul>
+            <% if current_user %>
+              <li><%= link_to "Logout", :logout, method: :delete %> |</li>
+              <li><%= link_to "Your Profile", user_path(current_user) %></li>
+            <% else %>
+              <li><%= link_to "Register", new_user_path %> |</li>
+              <li><%= link_to "Login", :login %></li>
+            <% end %>
+          </ul>
+        </nav>
       </div>
 
-      <nav class = "user-nav">
-        <ul>
-          <% if current_user %>
-            <li><%= link_to "Logout", :logout, method: :delete %> |</li>
-            <li><%= link_to "Your Profile", user_path(current_user) %></li>
-          <% else %>
-            <li><%= link_to "Register", new_user_path %> |</li>
-            <li><%= link_to "Login", :login %></li>
-          <% end %>
-        </ul>
-      </nav>
     </header>
 
     <% flash.each do |key, message| %>
