replicate owner views, js, css to users#show

--- a/app/views/users/owner.html.erb
+++ b/app/views/users/owner.html.erb
@@ -11,7 +11,7 @@
   <p><%= @owner.first_name %> has backed a total of <%= number_to_currency(@owner.pledges.map {|pledge| pledge.dollar_amount}.sum) %> on Crowfunder!</p>
 </section>
 
-<nav class="owner-nav">
+<nav class="profile-nav">
   <ul>
     <li><button id="projects">Projects</button></li>
     <li><button id="pledges">Pledges</button></li>
