'no pledges made yet' if no pledges

--- a/app/views/users/owner.html.erb
+++ b/app/views/users/owner.html.erb
@@ -91,4 +91,9 @@
       <% end %>
     </article>
   <% end %>
+
+  <% if @backed_projects.length == 0 %>
+  <p>No pledges have been made yet.</p>
+  <% end %>
+
 </section>
