--- a/app/assets/stylesheets/owners.scss
+++ b/app/assets/stylesheets/owners.scss
@@ -44,6 +44,15 @@ nav.profile-nav {
   }
 }
 
+.tab-change {
+  background-color: white;
+  color: black;
+}
+
+.content-change {
+  display: none;
+}
+
 
 // .project-list.changed {
 //   display: none;
