--- a/app/views/users/owner.html.erb
+++ b/app/views/users/owner.html.erb
@@ -13,8 +13,8 @@
 
 <nav class="profile-nav">
   <ul>
-    <li><button id="projects">Projects</button></li>
-    <li><button id="pledges">Pledges</button></li>
+    <li><button class="tab" id="projects">Projects</button></li>
+    <li><button class="tab" id="pledges">Pledges</button></li>
   </ul>
 </nav>
 
