--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,15 @@
 // Header Nav Styles
 .site-header {
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.17);
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;
   height: 60px;
+  background-color: white;
+}
+
+body {
+  padding-top: 60px;
 }
 
 .site-left-nav {
@@ -70,6 +77,9 @@ nav.site-nav ul, nav.user-nav ul {
   margin: 0;
   line-height: 60px;
 }
+
+
+
 
 .site-footer {
   background-color: grey;
