--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,3 +101,24 @@ nav.site-nav ul, nav.user-nav ul {
 .contributors {
   text-align: center;
 }
+
+.form-page {
+  text-align: center;
+  margin: 2rem auto;
+  padding: 1rem 0;
+  width: 40%;
+  background-color: #f9f9f9;
+}
+
+.field {
+  margin: 1rem;
+  p {
+    width: fit-content;
+  }
+  label{
+    display: inline-block;
+  }
+  input{
+    display: inline-block;
+  }
+}
