--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,33 +6,33 @@
       <% end %>
     </ul>
   <% end %>
-  
-  <div class="field">
-     <%= f.label :first_name %><br />
+
+  <p class="field">
+     <%= f.label :first_name %>
      <%= f.text_field :first_name %>
-  </div>
+  </p>
 
-  <div class="field">
-     <%= f.label :last_name %><br />
+  <p class="field">
+     <%= f.label :last_name %>
      <%= f.text_field :last_name %>
-  </div>
+  </p>
 
-  <div class="field">
-     <%= f.label :email %><br />
+  <p class="field">
+     <%= f.label :email %>
      <%= f.text_field :email %>
-  </div>
+  </p>
 
-  <div class="field">
-     <%= f.label :password %><br />
+  <p class="field">
+     <%= f.label :password %>
      <%= f.password_field :password %>
-  </div>
-  <div class="field">
-     <%= f.label :password_confirmation %><br />
+  </p>
+  <p class="field">
+     <%= f.label :password_confirmation %>
      <%= f.password_field :password_confirmation %>
-  </div>
+  </p>
 
-  <div class="field">
+  <p class="field">
      <%= f.submit %>
-  </div>
+  </p>
 
 <% end %>
