--- a/app/views/projects/search.html.erb
+++ b/app/views/projects/search.html.erb
@@ -1,16 +1,18 @@
-<h1>Search Results</h1>
+<div class="form-page">
+  <h1>Search Results</h1>
 
-<% if @projects == []%>
-<p>Nothing matches your search</p>
-<% else %>
-  <% @projects.uniq.each do |project| %>
-    <article class="project">
-    <%= link_to project, class: 'project-link' do %>
-      <h2 class="project-title"><%= project.title %></h2>
-      <time class="project-days-left">
-        <%= icon('clock-o') %>
-        <%= "#{time_ago_in_words(project.end_date)} #{( project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
+  <% if @projects == []%>
+  <p>Nothing matches your search</p>
+  <% else %>
+    <% @projects.uniq.each do |project| %>
+      <article class="project">
+      <%= link_to project, class: 'project-link' do %>
+        <h2 class="project-title"><%= project.title %></h2>
+        <time class="project-days-left">
+          <%= icon('clock-o') %>
+          <%= "#{time_ago_in_words(project.end_date)} #{( project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
+      <% end %>
+      </article>
     <% end %>
-    </article>
   <% end %>
-<% end %>
+</div
