--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,23 +102,29 @@ nav.site-nav ul, nav.user-nav ul {
   text-align: center;
 }
 
+
+// Form styles
 .form-page {
   text-align: center;
   margin: 2rem auto;
   padding: 1rem 0;
   width: 40%;
+  box-shadow: 1px 2px 2px 1px rgba(#000000, 0.1);
   background-color: #f9f9f9;
-}
 
-.field {
-  margin: 1rem;
-  p {
-    width: fit-content;
-  }
-  label{
-    display: inline-block;
-  }
-  input{
-    display: inline-block;
+  .field {
+    margin: 1rem;
+
+    p {
+      width: fit-content;
+    }
+
+    label {
+      display: inline-block;
+    }
+
+    input {
+      display: inline-block;
+    }
   }
 }
