--- a/app/views/users/owner.html.erb
+++ b/app/views/users/owner.html.erb
@@ -7,7 +7,7 @@
     }
   </style>
 <div class="profile-img"><%= image_tag @owner.user_pic %></div>
-  <h1><%= @owner.first_name %> <%= @owner.last_name %></h1>
+  <h1><%= @owner.full_name %></h1>
   <p><%= @owner.first_name %> has backed a total of <%= number_to_currency(@owner.pledges.map {|pledge| pledge.dollar_amount}.sum) %> on Crowfunder!</p>
 </section>
 
