Add classes to New Project page

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -7,37 +7,37 @@
     </ul>
   <% end %>
 
-  <p>
+  <p class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </p>
 
-  <p>
+  <p class="field">
     <%= f.label :description %>
     <%= f.text_field :description %>
   </p>
 
-  <p>
+  <p class="field">
     <%= f.label :goal %>
     <%= f.number_field :goal %>
   </p>
 
-  <p>
+  <p class="field">
     <%= f.label :image %>
     <%= f.text_field :image %>
   </p>
 
-  <p>
+  <p class="field">
     <%= f.label :start_date %>
     <%= f.datetime_select :start_date %>
   </p>
 
-  <p>
+  <p class="field">
     <%= f.label :end_date %>
     <%= f.datetime_select :end_date %>
   </p>
 
   <%= f.collection_check_boxes(:tag_ids, @tags, :id, :name) %>
-
+  <br>
   <%= f.submit %>
 <% end %>
