--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,7 +111,6 @@ nav.site-nav ul, nav.user-nav ul {
   width: 40%;
   box-shadow: 1px 2px 2px 1px rgba(#000000, 0.1);
   background-color: #f9f9f9;
-  @include clearfix;
 
   .field {
     margin: 2rem 3rem;
@@ -120,13 +119,11 @@ nav.site-nav ul, nav.user-nav ul {
 
     label {
       display: inline-block;
-      margin: 0 auto 0 1rem;
     }
 
     input {
       display: inline-block;
-      margin: 0 1rem 0 auto;
-
+      width: 50%
     }
   }
 }
