--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -28,6 +28,8 @@
     margin: 1rem 0;
     padding: 1rem 0;
     background-color: #f9f9f9;
+    box-shadow: 1px 1px 1px 1px rgba(#000000, 0.1);
+
     .project-image{
       grid-row-start: 1;
       grid-row-end: 2;}
@@ -65,146 +67,146 @@
   margin-bottom: 0;
 }
 
-
-@media ( min-width: 1024px ) {
-  .project-header {
-    display: grid;
-    grid-template-columns: repeat(14, 6fr);
-    grid-template-rows: repeat(10, 60px);
-    background-color: #f9f9f9;
-    h1 {
-      grid-column: 3 / 14;
-      grid-row: 1;
-      display: block;
-    }
-    h4 {
-      grid-column: 1 / 3;
-      grid-row: 1;
-      margin-left: 1rem;
-    }
-    div {
-      grid-column: 1 / 11;
-      grid-row: 4 /11;
-      margin: 1rem;
-      background-size: cover;
-    }
-    .description {
-      grid-column: 3 / 14;
-      grid-row: 2;
-    }
-    .goal-details {
-      grid-column: 11 / 16;
-      grid-row: 4 / 10;
-      color: cadetblue;
-    }
-    .pledge {
-      color: black;
-      margin: 3rem 0;
-    }
-    .tags {
-      grid-column: 3 / 12;
-      grid-row: 3;
-      margin: 1rem 0 1rem;
-      p {
-        background-color: cadetblue;
-        display: inline-block;
-        margin-right: 1rem;
-      a{
-        text-decoration: none;
-        color: white;
-        line-height: 1.5;
-        padding: 0 1.5rem;
-      }
-    }
+.project-header {
+  display: grid;
+  grid-template-columns: repeat(14, 6fr);
+  grid-template-rows: repeat(10, 60px);
+  background-color: #f9f9f9;
+  h1 {
+    grid-column: 3 / 14;
+    grid-row: 1;
+    display: block;
+  }
+  h4 {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    margin-left: 1rem;
+  }
+  div {
+    grid-column: 1 / 11;
+    grid-row: 4 /11;
+    margin: 1rem;
+    background-size: cover;
+  }
+  .description {
+    grid-column: 3 / 14;
+    grid-row: 2;
+  }
+  .goal-details {
+    grid-column: 11 / 16;
+    grid-row: 4 / 10;
+    color: cadetblue;
+  }
+  .pledge {
+    color: black;
+    margin: 3rem 0;
+  }
+  .tags {
+    grid-column: 3 / 12;
+    grid-row: 3;
+    margin: 1rem 0 1rem;
+    p {
+      background-color: cadetblue;
+      display: inline-block;
+      margin-right: 1rem;
+    a{
+      text-decoration: none;
+      color: white;
+      line-height: 1.5;
+      padding: 0 1.5rem;
     }
   }
-
-
-  .main-content {
-    margin-top: 15px;
-    display: grid;
-    grid-template-columns: repeat(6, 6fr);
-    grid-gap: 0.7rem;
-    .updates-and-comments {
-      grid-column: 1 / 5;
-      margin: 0 1.3rem;
-    }
-    .project-updates {
-      h2 {
-        display: inline-block;
-        margin-right: 3rem;
-      }
-      a {
-        font-size: 0.75rem;
-      }
-      ul {
-        padding-left: 0;
-        list-style: none;
-
-      }
-      .update {
-        box-shadow: -2px 4px 4px 2px rgba(#000000, 0.4);
-        padding: 1rem;
-        margin: 1rem 0;
-      }
-      .update-title {
-        display: block;
-        text-align: center;
-        font-size: 1.3rem;
-        line-height: 2;
-      }
-      .update-created {
-        line-height: 2;
-      }
-      .update-links {
-        display: inline-block;
-        width: 76%;
-        text-align: right;
-      }
-    }
-    .project-comments {
-      h2 {
-        line-height: 2;
-      }
-      p {
-        margin: 0.5rem 0;
-      }
-      ul {
-        list-style: none;
-        padding-left: 0;
-      }
-      li {
-        border-top: 1px solid lightgrey;
-        margin-bottom: 0.5rem;
-        padding-left: 1rem;
-      }
-    }
-    textarea {
-      width: 30rem;
-      height: 5rem;
-    }
-
-    .project-rewards {
-      grid-column: 5 / 7;
-      h2 {
-        display: inline-block;
-        margin-right: 3rem;
-      }
-      .all-rewards {
-        max-height: 700px;
-        overflow: scroll;
-      }
-      .reward {
-        text-align: center;
-        padding: 5px;
-        width: 95%;
-        margin: 15px auto;
-        box-shadow: 2px 4px 4px 2px rgba(#000000, 0.4)
-      }
-    }
   }
-
 }
+
+// Project Show Page
+.main-content {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(6, 6fr);
+  grid-gap: 0.7rem;
+  .updates-and-comments {
+    grid-column: 1 / 5;
+    margin: 0 1.3rem;
+  }
+  .project-updates {
+    h2 {
+      display: inline-block;
+      margin-right: 3rem;
+    }
+    a {
+      font-size: 0.75rem;
+    }
+    ul {
+      padding-left: 0;
+      list-style: none;
+
+    }
+    .update {
+      background-color: #f9f9f9;
+      box-shadow: -1px 1px 1px 1px rgba(#000000, 0.1);
+      padding: 1rem;
+      margin: 1rem 0;
+    }
+    .update-title {
+      display: block;
+      text-align: center;
+      font-size: 1.3rem;
+      line-height: 2;
+    }
+    .update-created {
+      line-height: 2;
+    }
+    .update-links {
+      display: inline-block;
+      width: 76%;
+      text-align: right;
+    }
+  }
+  .project-comments {
+    h2 {
+      line-height: 2;
+    }
+    p {
+      margin: 0.5rem 0;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    li {
+      border-top: 1px solid lightgrey;
+      margin-bottom: 0.5rem;
+      padding-left: 1rem;
+    }
+  }
+  textarea {
+    width: 30rem;
+    height: 5rem;
+  }
+
+  .project-rewards {
+    grid-column: 5 / 7;
+    h2 {
+      display: inline-block;
+      margin-right: 3rem;
+    }
+    .all-rewards {
+      max-height: 700px;
+      overflow: scroll;
+    }
+    .reward {
+      text-align: center;
+      padding: 5px;
+      width: 95%;
+      margin: 15px auto;
+      box-shadow: 1px 2px 2px 1px rgba(#000000, 0.1);
+      background-color: #f9f9f9;
+
+    }
+  }
+}
+
 @media ( max-width: 768px ) {
   .project-list{
     display: block;
