--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -194,6 +194,7 @@
     .all-rewards {
       max-height: 700px;
       overflow: scroll;
+      margin-bottom: 2rem;
     }
     .reward {
       text-align: center;
