--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div class="site-left-nav">
         <nav class="site-nav">
           <ul>
-            <li><%= link_to "Home", root_url %> |</li>
+            <li><%= link_to "Home", root_url %></li>
             <li><%= link_to "New Project", new_project_path %></li>
           </ul>
         </nav>
@@ -40,10 +40,10 @@
         <nav class = "user-nav">
           <ul>
             <% if current_user %>
-              <li><%= link_to "Logout", :logout, method: :delete %> |</li>
+              <li><%= link_to "Logout", :logout, method: :delete %></li>
               <li><%= link_to "Your Profile", user_path(current_user) %></li>
             <% else %>
-              <li><%= link_to "Register", new_user_path %> |</li>
+              <li><%= link_to "Register", new_user_path %></li>
               <li><%= link_to "Login", :login %></li>
             <% end %>
           </ul>
