--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,6 +91,22 @@ nav.site-nav ul, nav.user-nav ul {
   line-height: 60px;
 }
 
+// Flash Styles
+.flash-alert {
+  font-family: sans-serif;
+  text-align: center;
+  background-color: rgba(186, 64, 67, 0.5);
+  border: 1px solid red;
+  color: white;
+}
+
+.flash-notice {
+  text-align: center;
+  background-color: rgba(13, 49, 96, 0.5);
+  border: 1px solid blue;
+  color: white;
+}
+
 
 // Footer Styles
 .site-footer {
@@ -124,7 +140,8 @@ nav.site-nav ul, nav.user-nav ul {
   box-shadow: 1px 2px 2px 1px rgba(#000000, 0.1);
   background-color: #f9f9f9;
 
-  .field {
+  .field,
+  .field_with_errors {
     margin: 2rem 3rem;
     display: flex;
     justify-content: space-between;
