--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -67,6 +67,7 @@
   margin-bottom: 0;
 }
 
+// Project Show Page
 .project-header {
   display: grid;
   grid-template-columns: repeat(14, 6fr);
@@ -105,26 +106,29 @@
     grid-column: 3 / 12;
     grid-row: 3;
     margin: 1rem 0 1rem;
-    p {
-      background-color: cadetblue;
-      display: inline-block;
-      margin-right: 1rem;
     a{
+      background-color: cadetblue;
+      font-family: sans-serif;
+      padding: 0.5em;
+      color: white;
+      border: 0;
+      margin: 0.5rem;
       text-decoration: none;
       color: white;
-      line-height: 1.5;
-      padding: 0 1.5rem;
+
+      &:hover {
+        background-color: darken(cadetblue, 8%);
+      }
     }
-  }
   }
 }
 
-// Project Show Page
 .main-content {
   margin-top: 15px;
   display: grid;
   grid-template-columns: repeat(6, 6fr);
   grid-gap: 0.7rem;
+
   .updates-and-comments {
     grid-column: 1 / 5;
     margin: 0 1.3rem;
