Style error messages on form pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,7 +146,21 @@ nav.site-nav ul, nav.user-nav ul {
     justify-content: space-between;
     .field_with_errors {
       display: inline-block;
-      border-bottom: 1px solid red;
+      border-bottom: 1px solid tomato;
+    }
+  }
+
+  .errors {
+    font-family: sans-serif;
+    text-align: center;
+    list-style: none;
+    margin: 0 auto;
+    padding-left: 0;
+    border: 0;
+
+    li{
+      color: tomato;
+      padding: 0.5em;
     }
   }
 }
