--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@project, html: {multipart: true}) do |f| %>
   <% if @project.errors.any? %>
-    <ul>
+    <ul class="errors">
       <% @project.errors.full_messages.each do |m| %>
       <li><%= m %></li>
       <% end %>
