--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -5,11 +5,17 @@ html {
 }
 
 h1,
-h2,
 h3,
-h4,
 h5,
 h6 {
   font-family: $header-font-family;
   line-height: 1.1;
+}
+
+h2,
+h4,
+title {
+  font-family: $base-font-family;
+  line-height: 1.1;
+  letter-spacing: 0.05em;
 }
