--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: 'Libre Baskerville', Baskerville, serif;
+$base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $header-font-family: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
