--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -73,11 +73,7 @@
   grid-template-columns: repeat(14, 6fr);
   grid-template-rows: repeat(10, 60px);
   background-color: #f9f9f9;
-  h1 {
-    grid-column: 3 / 14;
-    grid-row: 1;
-    display: block;
-  }
+
   h4 {
     grid-column: 1 / 3;
     grid-row: 1;
@@ -86,12 +82,11 @@
   div {
     grid-column: 1 / 11;
     grid-row: 4 /11;
-    margin: 1rem;
+    // margin: 1rem;
     background-size: cover;
   }
-  .description {
-    grid-column: 3 / 14;
-    grid-row: 2;
+  .cover {
+    margin: 1em;
   }
   .goal-details {
     grid-column: 11 / 16;
@@ -102,17 +97,26 @@
     color: black;
     margin: 3rem 0;
   }
+  h1 {
+    grid-column: 4 / 14;
+    grid-row: 1;
+    display: block;
+  }
+  .description {
+    grid-column: 4 / 14;
+    grid-row: 2;
+  }
   .tags {
-    grid-column: 3 / 12;
+    grid-column: 4 / 12;
     grid-row: 3;
-    margin: 1rem 0 1rem;
+    margin-top: 1rem;
     a{
       background-color: cadetblue;
       font-family: sans-serif;
-      padding: 0.5em;
+      padding: 0.5em 1.5em;
       color: white;
       border: 0;
-      margin: 0.5rem;
+      margin-right: 1rem;
       text-decoration: none;
       color: white;
 
@@ -121,8 +125,15 @@
       }
     }
   }
+  .profile-img {
+    grid-column: 1 / 3;
+    grid-row: 2 / 5;
+    width: 120px;;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-left: 1rem;
+  }
 }
-
 .main-content {
   margin-top: 15px;
   display: grid;
