--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,11 +1,13 @@
 <section class="project-header">
   <h1><%= @project.title %></h1>
   <h4>By <%= link_to "#{@project.user.full_name}", project_owner_path(@project, @project.user) %></h4>
+  <div class="profile-img"><%= image_tag @project.user.user_pic %></div>
+
 
   <% if @project.image.present? %>
   <%= image_tag @project.image %>
   <% else %>
-  <div style="background-image: url(<%= ActionController::Base.helpers.asset_path("default.jpg") %>)"></div>
+  <div class="cover" style="background-image: url(<%= ActionController::Base.helpers.asset_path("default.jpg") %>)"></div>
   <% end %>
 
   <% if @project.tags.present? %>
