Change forms from p to div

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,30 +7,30 @@
     </ul>
   <% end %>
 
-  <p class="field">
+  <div class="field">
      <%= f.label :first_name %>
      <%= f.text_field :first_name %>
-  </p>
+  </div>
 
-  <p class="field">
+  <div class="field">
      <%= f.label :last_name %>
      <%= f.text_field :last_name %>
-  </p>
+  </div>
 
-  <p class="field">
+  <div class="field">
      <%= f.label :email %>
      <%= f.text_field :email %>
-  </p>
+  </div>
 
-  <p class="field">
+  <div class="field">
      <%= f.label :password %>
      <%= f.password_field :password %>
-  </p>
+  </div>
 
-  <p class="field">
+  <div class="field">
      <%= f.label :password_confirmation %>
      <%= f.password_field :password_confirmation %>
-  </p>
+  </div>
 
    <%= f.submit %>
 
