--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -33,13 +33,17 @@
     .project-image{
       grid-row-start: 1;
       grid-row-end: 2;}
+
     .project-padding{
       padding: 4%;
+
       .project-recap{
         grid-row-start: 2;
         grid-row-end: 3;
+
       p {
         height: 63px;}
+
       .project-title span, .project-days-left{
         font-size: 16px;}
       }
@@ -98,16 +102,16 @@
     margin: 3rem 0;
   }
   h1 {
-    grid-column: 4 / 14;
+    grid-column: 3 / 14;
     grid-row: 1;
     display: block;
   }
   .description {
-    grid-column: 4 / 14;
+    grid-column: 3 / 14;
     grid-row: 2;
   }
   .tags {
-    grid-column: 4 / 12;
+    grid-column: 3 / 12;
     grid-row: 3;
     margin-top: 1rem;
     a{
@@ -127,11 +131,15 @@
   }
   .profile-img {
     grid-column: 1 / 3;
-    grid-row: 2 / 5;
-    width: 120px;;
+    grid-row: 2 / 4;
     overflow: hidden;
-    border-radius: 50%;
-    margin-left: 1rem;
+    img {
+      width: auto;
+      height: 100%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 .main-content {
