Adding custom cover and user pictures

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,9 +10,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .hero-image{
-  background-image:
-    linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    asset-url("crowdfunder_hero.jpg");
+  // background-image:
+  //   linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+  //   asset-url("crowdfunder_hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
