--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,16 @@
   </div>
 
   <div class="field">
+     <%= f.label :cover_pic %>
+     <%= f.text_field :cover_pic %>
+  </div>
+
+  <div class="field">
+     <%= f.label :user_pic %>
+     <%= f.text_field :user_pic %>
+  </div>
+
+  <div class="field">
      <%= f.label :password %>
      <%= f.password_field :password %>
   </div>
