--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -56,7 +56,9 @@
     }
   }
 }
-
+.cover img{
+  max-height: 100%;
+}
 .project-image > img {
   margin: auto;
 }
@@ -91,6 +93,7 @@
   }
   .cover {
     margin: 1em;
+    text-align: center;
   }
   .goal-details {
     grid-column: 11 / 16;
