--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,7 +5,7 @@
 
 
   <% if @project.image.present? %>
-  <%= image_tag @project.image %>
+    <div class="cover"> <%= image_tag @project.image %> </div>
   <% else %>
   <div class="cover" style="background-image: url(<%= ActionController::Base.helpers.asset_path("default.jpg") %>)"></div>
   <% end %>
